rank_table: Fix 'name' column visibility when scrolled right

--- a/css/main.css
+++ b/css/main.css
@@ -542,6 +542,7 @@ div.rank_table_container { position: relative; overflow: auto; }
         position: sticky;
         left: 0;
         background-color: inherit;
+        z-index: 1;
     }
 }
 
